--- a/cloudsyncpro-backend/package.json
+++ b/cloudsyncpro-backend/package.json
@@ -19,7 +19,10 @@
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.1",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "sharp": "^0.34.3",
     "validator": "^13.15.15"
   },
   "devDependencies": {
